<?xml version="1.0" encoding="utf-8"?>
   
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:isScrollContainer="false"
    android:background="@drawable/main_barkground"
>
	<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:layout_weight="1"
    android:isScrollContainer="false"
>
	<ImageView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:layout_marginTop="2dip"
        android:layout_marginRight="2dip"
        
        android:src="@drawable/main_logo" />
	</LinearLayout>
	
	<LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="15dip"
        android:padding="10dip"
        android:background="@drawable/purple_plate"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dip"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#FFF"
            android:text="@string/login_get_started" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="2dip"
            android:textColor="#FFF"
            android:text="@string/login_get_started_more" />
        
        <Button
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:enabled="true"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/login_label" 
            android:onClick="onClick"
            />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dip"
            android:src="@drawable/line" />

        <TextView
            android:id="@+id/newAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:text="@string/need_an_account"
          
            android:textColor="#FFF" />

    </LinearLayout>
</LinearLayout>