<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:umadsdk="http://schemas.android.com/apk/res/com.LoveBus"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mi_se"
    android:orientation="vertical"
    android:layout_marginTop="0dp" >

    <LinearLayout 
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/mainactivity_blue_1"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">
        
        <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="4"
	        android:orientation="horizontal"
	        android:background="@drawable/nav_blue_bg">

        <TextView            
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:text="WEITIAN"
            android:paddingLeft="12dp"
            android:textAppearance="@style/TextMainHeader"/>

        <Button
            android:id="@+id/notificationButton"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="3dp"
            android:background="@drawable/selector_notification_tray_empty_bg"/>
    	</LinearLayout>
    	
    	<FrameLayout
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:layout_marginLeft="1dp"
	        android:layout_marginRight="1dp"
	        android:orientation="horizontal"
	        android:background="@drawable/selector_map_button">
    	    
    	<Button
    	    android:id="@+id/refurbishImageViewButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/selector_map_button"/>
    	
    	<ImageView 
    	    android:id="@+id/refurbishImageView"
    	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" 
            android:scaleType="center"
            android:background="@drawable/webview_refresh"/>

    	<ProgressBar
    	    android:id="@+id/refurbishImageViewProgressBar"
    	    android:visibility="gone"
    	    android:layout_width="25dp"
    	    android:layout_height="25dp"
    	    android:layout_gravity="center_vertical|center_horizontal" 
    	    style="@style/Theme.BlueProgressBar"/>
    	
    	</FrameLayout>
       
        <Button
            android:id="@+id/mapButton"        
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:text="MAP"
            android:textSize="18dp"
   			android:textColor="@color/white_start"
    		android:textStyle="bold"
            android:background="@drawable/selector_map_button"/>
    </LinearLayout>
      
  	<LinearLayout
        android:id="@+id/linearLayoutNew"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/white_start">
        
  	    <TextView
            android:id="@+id/textview1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/home"
            android:textColor="@color/grey_end" 
            android:background="@color/black_start"/>

        <TextView
            android:id="@+id/textview2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/explore"
            android:textColor="@color/grey_end"
            android:background="@color/black_start"/>

        <TextView
            android:id="@+id/textview3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/me"
            android:textColor="@color/grey_end"
            android:background="@color/black_start"/>
  	</LinearLayout>
  	
  	<LinearLayout
  	    android:layout_width="fill_parent"
  	    android:layout_height="0dp"
  	    android:layout_weight="0.1"
  	    android:background="@color/black_start">
	  	<ImageView 
	  	    android:id="@+id/cursor"
	  	    android:layout_width="fill_parent"
	  	    android:layout_height="wrap_content"
	  	    android:background="@drawable/arrow_banner_blue"/>
     </LinearLayout>
     
  	 <android.support.v4.view.ViewPager
        android:id="@+id/bPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:background="#FFDFD7D7"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

<!--
   
    
      -->
</LinearLayout>